feat: structure complete recursive tree for node navigation

--- a/src/pages/tree.css
+++ b/src/pages/tree.css
@@ -15,7 +15,7 @@
 }
 
 .tree ul li {
-  border-left: 2px solid #a3d6a3;
+  border-left: 2px solid var(--tree-color, #a3d6a3);
 }
 
 .tree summary,
@@ -43,7 +43,7 @@
 }
 
 .item:hover {
-  background-color: #a3d6a338;
+  background-color: var(--color-accent);
 }
 
 .tree ul li:last-child {
@@ -58,7 +58,7 @@
   left: -2px;
   width: calc(var(--tree-spacing) + 2px);
   height: calc(var(--tree-spacing) + 1px);
-  border: solid rgb(163, 214, 163);
+  border: solid var(--tree-color, #a3d6a3);
   border-width: 0 0 2px 2px;
 }
 
@@ -81,7 +81,7 @@
 }
 
 .tree li::after,
-.tree summary::before {
+.tree li > details > summary::before {
   content: "";
   display: block;
   position: absolute;
@@ -90,12 +90,16 @@
   width: calc(2 * var(--tree-radius));
   height: calc(2 * var(--tree-radius));
   border-radius: 50%;
-  background: green;
+  background: var(--tree-color, green);
 }
 
-.tree summary::before {
+.tree li > details > summary::before {
   z-index: 1;
-  background: rgb(163, 214, 163) url("/assets/expand-collapse.svg") 0 0;
+  background: var(--tree-color, #a3d6a3) url("/expand-collapse.svg") 0 0;
+}
+
+.tree li > details > summary:hover::before {
+  background-color: var(--tree-color, green);
 }
 
 .tree details[open] > summary::before {
